k8s/artifacts/ingress/graphql-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-demo
  namespace: graphql-demo
spec:
  ingressClassName: nginx
  rules:
  - host: graphql-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graphql-demo-api
            port:
              number: 8000
